style: Fix overflow on answer boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ a {
 
 .house-text, .answer-text {
     text-align: center;
-    font-size: 200%;
+    font-size: 140%;
     font-weight: bold;
 }
 
@@ -439,9 +439,6 @@ footer p {
     }
     .choose-house, .question-text {
         font-size: 200%;
-    }
-    .house-text, .answer-text {
-        font-size: 150%;
     }
     .overlay {
         height: 150px;
